--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -40,7 +40,7 @@
                 <div class="podborki_cat_item">
                     <div class="podborki_cat_item_photo">
                         <a href="<%- category.url %>" rel="nofollow">
-                            <img src="<% if (category.image) { %> <%- category.image %> <% } else { %>http://st.kp.yandex.net/images/kadr/sm_2136182.jpg<% } %>" alt="<%- category.name %>"></a>
+                            <img src="<% if (category.image) { %> <%- category.image %> <% } else { %>https://st.kp.yandex.net/images/kadr/sm_2136182.jpg<% } %>" alt="<%- category.name %>"></a>
                     </div>
                     <div class="podborki_cat_item_title"><a href="<%- category.url %>"><%- category.name %></a></div>
                 </div>
