--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -116,11 +116,8 @@
 
                         <div>
 
-                            <% if (!page.abuse || page.abuse.indexOf(''+movie.kp_id) === -1) { %>
-                            <div id="yohoho" data-title="<%- movie.title %> (<%- movie.year %>)"></div>
-                            <script src="https://yohoho.xyz/yo.js"></script>
-                            <% } else { %>
-                            <p style="color: #fff; text-align: center; margin: 30px;">Фильм закрыт по просьбе правообладателя!</p>
+                            <% if (page.player) { %>
+                            <%- page.player %>
                             <% } %>
 
                         </div>
