--- a/views/trailer.ejs
+++ b/views/trailer.ejs
@@ -114,8 +114,9 @@
 
                         <div>
 
-                            <div id="yohoho" data-title="<%- movie.title %> (<%- movie.year %>) трейлер"></div>
-                            <script src="https://yohoho.xyz/yo.js"></script>
+                            <% if (page.player) { %>
+                            <%- page.player %>
+                            <% } %>
 
                         </div>
                     </div>
