--- a/views/download.ejs
+++ b/views/download.ejs
@@ -113,7 +113,7 @@
                             <li><a href="<%- movie.url %>/<%- page.urls.movies.online %>">Онлайн</a></li>
                         </ul>
 
-                        <div>
+                        <div style="position: relative;">
 
                             <% if (page.player) { %>
                             <%- page.player %>
