--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -114,7 +114,7 @@
                             <li class="complaint not-tab"><a href="#watchLaterMovie" id="watchLater">Досмотреть позже</a></li>
                         </ul>
 
-                        <div>
+                        <div style="position: relative;">
 
                             <% if (page.player) { %>
                             <%- page.player %>
