--- a/views/picture.ejs
+++ b/views/picture.ejs
@@ -108,6 +108,8 @@
                 <%- page.player %>
                 <% } %>
 
+                <div style="height: 10px"></div>
+
                 <div class="shares">
                     <div class="social-likes">
                         <div class="vkontakte" title="Поделиться ссылкой во Вконтакте">Поделиться</div>
