--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,6 +1,7 @@
 <div class="content">
     <ul>
         <li><a href="<%- page.protocol %><%- page.domain %>" rel="nofollow">Главная</a></li>
+        <li style="color: #ccc">Для связи с администрацией: <%- page.email %></li>
         <li class="top" id="back-top"><a href="#top" id="top_footer" rel="nofollow">Вверх</a></li>
     </ul>
 </div>
