--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,5 +1,6 @@
 <div class="content">
     <ul>
+        <li style="color: #fff">© 2016 CinemaPress ACMS</li>
         <li><a href="<%- page.protocol %><%- page.domain %>" rel="nofollow">Главная</a></li>
         <li style="color: #ccc">Для связи с администрацией: <%- page.email %></li>
         <li class="top" id="back-top"><a href="#top" id="top_footer" rel="nofollow">Вверх</a></li>
