--- a/views/download.ejs
+++ b/views/download.ejs
@@ -21,8 +21,7 @@
 
         <div class="speedbar">
             <span id="dle-speedbar">
-                <a href="/">Главная</a> &#9658;
-                <% if (movie.genres_url) { %><%- movie.genres_url %><% } else { %><%- movie.year_url %><% } %> &#9658; <%- movie.title_ru %>
+                <a href="/">Главная</a> &#9658; <% if (movie.genres_url) { %><%- movie.genres_url %><% } else { %><%- movie.year_url %><% } %> &#9658; <a href="<%- movie.url %>"><%- movie.title_ru %></a> &#9658; Трекер
             </span>
         </div>
 
@@ -52,10 +51,6 @@
 
                 <div class="description">
                     <a href="<%- movie.url %>/<%- page.urls.movies.online %>" class="w-online" rel="nofollow"></a>
-                    <% if (movie.description) { %>
-                    <div class="full_desc">Описание:</div>
-                    <p><%- movie.description %></p>
-                    <% } %>
                 </div>
 
                 <div class="new_information">
