--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -20,7 +20,7 @@
         <div class="logo">
             <a href="<%- page.protocol %><%- page.domain %>" rel="nofollow"><img src="/themes/sansa/public/images/new/logo.png" alt="Логотип"></a>
         </div>
-        <a href="#continueViewingMovie" class="reg continueViewingBlock" id="continueViewing" style="display: none;">Остановились?</a>
+        <a href="javascript:void(0)" class="reg continueViewingBlock" id="continueViewing" style="display: none;">Остановились?</a>
         <div class="search">
             <form action="<%- page.protocol %><%- page.domain %>/<%- page.urls.search %>/title" name="searchform" method="get">
                 <input type="text" class="search_inp" name="q" id="story" autocomplete="off" placeholder="Поиск на сайте...">
