--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -111,7 +111,7 @@
                             <li class="active">Фильм</li>
                             <li><a href="<%- movie.url %>/<%- page.urls.movies.trailer %>">Трейлер</a></li>
                             <li><a href="<%- movie.url %>/<%- page.urls.movies.online %>">Онлайн</a></li>
-                            <li class="complaint not-tab watchLaterBlock" style="display: none;"><a href="#watchLaterMovie" id="watchLater">Досмотреть позже</a></li>
+                            <li class="complaint not-tab watchLaterBlock" style="display: none;"><a href="javascript:void(0)" id="watchLater">Досмотреть позже</a></li>
                         </ul>
 
                         <div style="position: relative; height: 370px;">
