--- a/views/online.ejs
+++ b/views/online.ejs
@@ -106,7 +106,7 @@
                         <ul class="gal_line">
                             <li class="active">Онлайн</li>
                             <li><a href="<%- movie.url %>/<%- page.urls.movies.trailer %>">Трейлер</a></li>
-                            <li class="complaint not-tab"><a href="#watchLaterMovie" id="watchLater">Досмотреть позже</a></li>
+                            <li class="complaint not-tab"><a href="javascript:void(0)" id="watchLater">Досмотреть позже</a></li>
                         </ul>
 
                         <div style="position: relative; height: 370px;">
