--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -11,7 +11,6 @@
             </div>
 
         </div>
-
     </div>
 </div>
 
@@ -66,10 +65,10 @@
 
             <% if (page.social) { %>
             <div class="social">
-                <% if (page.social.twitter) { %><a href="<%- page.social.twitter %>" class="sbut tw"></a><% } %>
-                <% if (page.social.facebook) { %><a href="<%- page.social.facebook %>" class="sbut fb"></a><% } %>
-                <% if (page.social.gplus) { %><a href="<%- page.social.gplus %>" class="sbut gp"></a><% } %>
-                <% if (page.social.vk) { %><a href="<%- page.social.vk %>" class="sbut vk"></a><% } %>
+                <% if (page.social.twitter) { %><a href="<%- page.social.twitter %>" target="_blank" class="sbut tw"></a><% } %>
+                <% if (page.social.facebook) { %><a href="<%- page.social.facebook %>" target="_blank" class="sbut fb"></a><% } %>
+                <% if (page.social.gplus) { %><a href="<%- page.social.gplus %>" target="_blank" class="sbut gp"></a><% } %>
+                <% if (page.social.vk) { %><a href="<%- page.social.vk %>" target="_blank" class="sbut vk"></a><% } %>
             </div>
             <% } %>
             
