--- a/views/download.ejs
+++ b/views/download.ejs
@@ -172,6 +172,8 @@
 
             <% } } } %>
 
+            <div style="clear: both;"></div>
+
             <div class="comment-list">
 
                 <% if (page.comments) { %>
@@ -182,6 +184,8 @@
 
         </div>
 
+        <div style="clear: both;"></div>
+
         <div class="main-info">
             ﻿
             <div class="page_seo">
@@ -189,6 +193,8 @@
             </div>
 
         </div>
+
+        <div style="clear: both;"></div>
 
         <div class="main-info recentlyViewedBlock" style="margin: 20px 0 0 0; display: none;">
 
