--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -182,6 +182,8 @@
 
             <% } } } %>
 
+            <div style="clear: both;"></div>
+
             <div class="comment-list">
 
                 <% if (page.comments) { %>
@@ -192,6 +194,8 @@
 
         </div>
 
+        <div style="clear: both;"></div>
+
         <div class="main-info">
             ﻿
             <div class="page_seo">
@@ -199,6 +203,8 @@
             </div>
 
         </div>
+
+        <div style="clear: both;"></div>
 
         <div class="main-info recentlyViewedBlock" style="margin: 20px 0 0 0; display: none;">
 
