--- a/views/picture.ejs
+++ b/views/picture.ejs
@@ -148,6 +148,8 @@
 
             <% } } } %>
 
+            <div style="clear: both;"></div>
+
             <div class="comment-list">
 
                 <% if (page.comments) { %>
@@ -158,6 +160,8 @@
 
         </div>
 
+        <div style="clear: both;"></div>
+
         <div class="main-info">
             ﻿
             <div class="page_seo">
@@ -165,6 +169,8 @@
             </div>
 
         </div>
+
+        <div style="clear: both;"></div>
 
         <div class="main-info recentlyViewedBlock" style="margin: 20px 0 0 0; display: none;">
 
