--- a/views/trailer.ejs
+++ b/views/trailer.ejs
@@ -176,6 +176,8 @@
 
             <% } } } %>
 
+            <div style="clear: both;"></div>
+
             <div class="comment-list">
 
                 <% if (page.comments) { %>
@@ -186,6 +188,8 @@
 
         </div>
 
+        <div style="clear: both;"></div>
+
         <div class="main-info">
             ﻿
             <div class="page_seo">
@@ -193,6 +197,8 @@
             </div>
 
         </div>
+
+        <div style="clear: both;"></div>
 
         <div class="main-info recentlyViewedBlock" style="margin: 20px 0 0 0; display: none;">
 
