--- a/views/online.ejs
+++ b/views/online.ejs
@@ -177,6 +177,8 @@
 
             <% } } } %>
 
+            <div style="clear: both;"></div>
+
             <div class="comment-list">
 
                 <% if (page.comments) { %>
@@ -187,6 +189,8 @@
 
         </div>
 
+        <div style="clear: both;"></div>
+
         <div class="main-info">
             ﻿
             <div class="page_seo">
@@ -194,6 +198,8 @@
             </div>
 
         </div>
+
+        <div style="clear: both;"></div>
 
         <div class="main-info recentlyViewedBlock" style="margin: 20px 0 0 0; display: none;">
 
