Add Episode module, improvement SEO

--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -52,6 +52,10 @@
 
         <% } %>
 
+        <% if (page.seo) { %>
+
+        <div style="clear: both;"></div>
+
         <div class="main-info">
             ﻿
             <div class="page_seo">
@@ -60,6 +64,10 @@
             </div>
 
         </div>
+
+        <div style="clear: both;"></div>
+
+        <% } %>
 
         <div class="main-info recentlyViewedBlock" style="margin: 20px 0 0 0; display: none;">
 
