--- a/views/category.ejs
+++ b/views/category.ejs
@@ -188,6 +188,10 @@
             </div>
         </div>
 
+        <% if (page.seo) { %>
+
+        <div style="clear: both;"></div>
+
         <div class="main-info">
             ﻿
             <div class="page_seo">
@@ -196,6 +200,10 @@
             </div>
 
         </div>
+
+        <div style="clear: both;"></div>
+
+        <% } %>
 
         <div class="main-info recentlyViewedBlock" style="margin: 20px 0 0 0; display: none;">
 
