--- a/views/index.ejs
+++ b/views/index.ejs
@@ -116,6 +116,10 @@
 
         </div>
 
+        <% if (page.seo) { %>
+
+        <div style="clear: both;"></div>
+
         <div class="main-info">
             ﻿
             <div class="page_seo">
@@ -124,6 +128,10 @@
             </div>
 
         </div>
+
+        <div style="clear: both;"></div>
+
+        <% } %>
 
         <div class="main-info recentlyViewedBlock" style="margin: 20px 0 0 0; display: none;">
 
