--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -59,6 +59,7 @@
                 </div>
 
                 <div class="new_information">
+
                     <div class="bleft">
                         <ul>
                             <% if (movie.year_url) { %>
@@ -95,6 +96,11 @@
                     </div>
                     <% } %>
 
+                </div>
+
+                <div class="new_information episodesListBlock" style="display: none;">
+                    <h3><%- movie.title %> новые серии</h3>
+                    <div id="episodesList" data-id="<%- movie.kp_id %>"></div>
                 </div>
 
             </div>
@@ -140,6 +146,23 @@
                 </div>
 
             </div>
+
+            <% if (page.seo) { %>
+
+            <div style="clear: both;"></div>
+
+            <div class="main-info">
+                ﻿
+                <div class="page_seo">
+                    <h1><%- page.title %></h1>
+                    <%- page.seo %>
+                </div>
+
+            </div>
+
+            <div style="clear: both;"></div>
+
+            <% } %>
 
             <% if (movie.pictures.length) { %>
 
@@ -190,16 +213,6 @@
                 <%- page.comments %>
                 <% } %>
 
-            </div>
-
-        </div>
-
-        <div style="clear: both;"></div>
-
-        <div class="main-info">
-            ﻿
-            <div class="page_seo">
-                <%- page.seo %>
             </div>
 
         </div>
