--- a/views/trailer.ejs
+++ b/views/trailer.ejs
@@ -52,9 +52,13 @@
 
                 <div class="description">
                     <a href="<%- movie.url %>/<%- page.urls.movies.online %>" class="w-online" rel="nofollow"></a>
+                    <% if (page.seo) { %>
+                    <p><%- page.seo %></p>
+                    <% } %>
                 </div>
 
                 <div class="new_information">
+
                     <div class="bleft">
                         <ul>
                             <% if (movie.year_url) { %>
@@ -91,6 +95,11 @@
                     </div>
                     <% } %>
 
+                </div>
+
+                <div class="new_information episodesListBlock" style="display: none;">
+                    <h3><%- movie.title %> новые серии</h3>
+                    <div id="episodesList" data-id="<%- movie.kp_id %>"></div>
                 </div>
 
             </div>
@@ -184,16 +193,6 @@
                 <%- page.comments %>
                 <% } %>
 
-            </div>
-
-        </div>
-
-        <div style="clear: both;"></div>
-
-        <div class="main-info">
-            ﻿
-            <div class="page_seo">
-                <%- page.seo %>
             </div>
 
         </div>
