--- a/views/download.ejs
+++ b/views/download.ejs
@@ -96,7 +96,7 @@
 
                 </div>
 
-                <div class="new_information episodesListBlock" style="display: none;">
+                <div class="new_information episodesListBlock" style="border-top: 0; margin: 10px; padding: 0; display: none;">
                     <h3><%- movie.title %> новые серии</h3>
                     <div id="episodesList" data-id="<%- movie.kp_id %>"></div>
                 </div>
