--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -98,7 +98,7 @@
 
                 </div>
 
-                <div class="new_information episodesListBlock" style="display: none;">
+                <div class="new_information episodesListBlock" style="border-top: 0; margin: 10px; padding: 0; display: none;">
                     <h3><%- movie.title %> новые серии</h3>
                     <div id="episodesList" data-id="<%- movie.kp_id %>"></div>
                 </div>
@@ -154,7 +154,6 @@
             <div class="main-info">
                 ﻿
                 <div class="page_seo">
-                    <h1><%- page.title %></h1>
                     <%- page.seo %>
                 </div>
 
