--- a/views/category.ejs
+++ b/views/category.ejs
@@ -95,7 +95,7 @@
                 <div class="s_name">
                     <div class="fname">
                         <a href="<%- movie.url %>">
-                            <%- movie.title_ru %>
+                            <%- movie.title %>
                             <span><%- movie.year %></span> </a>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                     </div>
 
                     <a href="<%- movie.url %>" rel="nofollow">
-                        <img src="<%- movie.poster %>" alt="<%- movie.title_ru %>" title="<%- movie.title_ru %>"> </a>
+                        <img src="<%- movie.poster %>" alt="<%- movie.title %>" title="<%- movie.title %>"> </a>
 
                 </div>
 
