--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
                 <div class="s_name">
                     <div class="fname">
                         <a href="<%- movie.url %>">
-                            <%- movie.title_ru %>
+                            <%- movie.title %>
                             <span><% if (movie.season && movie.episode) { %><%- movie.season %> сезон <%- movie.episode %> серия <% if (movie.translate) { %><%- movie.translate %><% } %><% } else { %><%- movie.year %><% } %></span> </a>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
                     </div>
 
                     <a href="<%- movie.url %>" rel="nofollow">
-                        <img src="<%- movie.poster %>" alt="<%- movie.title_ru %>" title="<%- movie.title_ru %>"> </a>
+                        <img src="<%- movie.poster %>" alt="<%- movie.title %>" title="<%- movie.title %>"> </a>
 
                 </div>
 
