--- a/views/picture.ejs
+++ b/views/picture.ejs
@@ -22,7 +22,7 @@
         <div class="speedbar">
             <span id="dle-speedbar">
                 <a href="/">Главная</a> &#9658;
-                <% if (movie.genres_url) { %><%- movie.genres_url %><% } else { %><%- movie.year_url %><% } %> &#9658; <a href="<%- movie.url %>"><%- movie.title_ru %></a> &#9658; Галерея
+                <% if (movie.genres_url) { %><%- movie.genres_url %><% } else { %><%- movie.year_url %><% } %> &#9658; <a href="<%- movie.url %>"><%- movie.title %></a> &#9658; Галерея
             </span>
         </div>
 
@@ -30,7 +30,7 @@
 
             <div class="story full">
 
-                <div class="s_name"><h1><%- movie.title_ru %> кадры из фильма <span><%- movie.year %></span></h1></div>
+                <div class="s_name"><h1><%- movie.title %> кадры из фильма <span><%- movie.year %></span></h1></div>
 
                 <% if (movie.rating) { %>
 
@@ -46,7 +46,7 @@
 
                 <div class="poster_m">
                     <div class="poster_main">
-                        <div class="poster_main_2"><img src="<%- movie.poster %>" alt="<%- movie.title_ru %>" title="<%- movie.title_ru %>"></div>
+                        <div class="poster_main_2"><img src="<%- movie.poster %>" alt="<%- movie.title %>" title="<%- movie.title %>"></div>
                     </div>
                 </div>
 
@@ -105,7 +105,7 @@
             </div>
 
             <div class="full_h2">
-                <h2><%- movie.title_ru %> кадры, картинки, скриншоты из фильма</h2>
+                <h2><%- movie.title %> кадры, картинки, скриншоты из фильма</h2>
             </div>
             <div class="player-block">
 
@@ -145,8 +145,8 @@
                 <% if (category.movies.length) { category.movies.forEach(function (movie) {  %>
 
                 <div class="item">
-                    <a href="<%- movie.url %>"><img src="<%- movie.poster %>" alt="<%- movie.title_ru %>" title="<%- movie.title_ru %>"/></a>
-                    <div class="link"><a href="<%- movie.url %>"><%- movie.title_ru %> <%- movie.year %></a></div>
+                    <a href="<%- movie.url %>"><img src="<%- movie.poster %>" alt="<%- movie.title %>" title="<%- movie.title %>"/></a>
+                    <div class="link"><a href="<%- movie.url %>"><%- movie.title %> <%- movie.year %></a></div>
                 </div>
 
                 <% }); } %>
