--- a/views/download.ejs
+++ b/views/download.ejs
@@ -20,12 +20,20 @@
     <div class="right">
 
         <div class="speedbar">
-            <span id="dle-speedbar">
+            <span id="cinemapress-speedbar">
                 <a href="/">Главная</a> &#9658; <% if (movie.genres_url) { %><%- movie.genres_url %><% } else { %><%- movie.year_url %><% } %> &#9658; <a href="<%- movie.url %>"><%- movie.title %></a> &#9658; Трекер
             </span>
         </div>
 
-        <div id="dle-content">
+        <% if (typeof page.adv == 'object' && page.adv.top) { %>
+        <div style="clear: both;"></div>
+        <div style="text-align: center; margin: 10px auto">
+            <%- page.adv.top %>
+        </div>
+        <div style="clear: both;"></div>
+        <% } %>
+
+        <div id="cinemapress-content">
 
             <div class="story full">
 
@@ -192,6 +200,14 @@
             </div>
 
         </div>
+
+        <% if (typeof page.adv == 'object' && page.adv.bottom) { %>
+        <div style="clear: both;"></div>
+        <div style="text-align: center; margin: 10px auto">
+            <%- page.adv.bottom %>
+        </div>
+        <div style="clear: both;"></div>
+        <% } %>
 
         <div style="clear: both;"></div>
 
