--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -20,11 +20,19 @@
     <div class="right">
 
         <div class="speedbar">
-            <span id="dle-speedbar">
+            <span id="cinemapress-speedbar">
                 <a href="/">Главная</a> &#9658;
                 <%- page.title %>
             </span>
         </div>
+
+        <% if (typeof page.adv == 'object' && page.adv.top) { %>
+        <div style="clear: both;"></div>
+        <div style="text-align: center; margin: 10px auto">
+            <%- page.adv.top %>
+        </div>
+        <div style="clear: both;"></div>
+        <% } %>
 
         <div class="category-name_2 category-name_2_podb">
             <h1><%- page.title %></h1>
@@ -32,7 +40,7 @@
 
         <% if (typeof categories == 'object' && categories.length) { %>
 
-        <div id="dle-content">
+        <div id="cinemapress-content">
             <div class="podborki_cat_2">
 
                 <% categories.forEach(function (category) { %>
@@ -50,6 +58,14 @@
             </div>
         </div>
 
+        <% } %>
+
+        <% if (typeof page.adv == 'object' && page.adv.bottom) { %>
+        <div style="clear: both;"></div>
+        <div style="text-align: center; margin: 10px auto">
+            <%- page.adv.bottom %>
+        </div>
+        <div style="clear: both;"></div>
         <% } %>
 
         <% if (page.seo) { %>
