--- a/views/includes/left.ejs
+++ b/views/includes/left.ejs
@@ -87,7 +87,9 @@
 <% } %>
 
 <% if (typeof page.adv == 'object' && page.adv.left) { %>
+<div style="clear: both;"></div>
 <div style="text-align: center; margin: 10px auto">
     <%- page.adv.left %>
 </div>
+<div style="clear: both;"></div>
 <% } %>
