--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -118,6 +118,7 @@
             </div>
 
             <% if (typeof page.adv == 'object' && page.adv.over) { %>
+            <div style="clear: both;"></div>
             <div style="text-align: center; margin: 10px auto">
                 <%- page.adv.over %>
             </div>
@@ -163,6 +164,7 @@
             </div>
 
             <% if (typeof page.adv == 'object' && page.adv.under) { %>
+            <div style="clear: both;"></div>
             <div style="text-align: center; margin: 10px auto">
                 <%- page.adv.under %>
             </div>
