--- a/views/episode.ejs
+++ b/views/episode.ejs
@@ -117,6 +117,7 @@
             </div>
 
             <% if (typeof page.adv == 'object' && page.adv.over) { %>
+            <div style="clear: both;"></div>
             <div style="text-align: center; margin: 10px auto">
                 <%- page.adv.over %>
             </div>
@@ -161,6 +162,7 @@
             </div>
 
             <% if (typeof page.adv == 'object' && page.adv.under) { %>
+            <div style="clear: both;"></div>
             <div style="text-align: center; margin: 10px auto">
                 <%- page.adv.under %>
             </div>
