--- a/views/download.ejs
+++ b/views/download.ejs
@@ -115,10 +115,10 @@
                 <h2><%- movie.title %> скачать бесплатно в хорошем качестве</h2>
             </div>
 
-            <% if (typeof page.adv == 'object' && page.adv.top) { %>
+            <% if (typeof page.adv == 'object' && page.adv.over) { %>
             <div style="clear: both;"></div>
             <div style="text-align: center; margin: 10px auto">
-                <%- page.adv.top %>
+                <%- page.adv.over %>
             </div>
             <% } %>
 
