--- a/views/episode.ejs
+++ b/views/episode.ejs
@@ -221,10 +221,10 @@
 
         </div>
 
-        <% if (typeof page.adv == 'object' && page.adv.top) { %>
+        <% if (typeof page.adv == 'object' && page.adv.bottom) { %>
         <div style="clear: both;"></div>
         <div style="text-align: center; margin: 10px auto">
-            <%- page.adv.top %>
+            <%- page.adv.bottom %>
         </div>
         <div style="clear: both;"></div>
         <% } %>
