--- a/views/index.ejs
+++ b/views/index.ejs
@@ -122,6 +122,27 @@
 
             <% } } } %>
 
+            <div class="navigation">
+
+                <span class="list-pages">
+                    <% if (page.pagination.prev.length) { %>
+                    <% page.pagination.prev.slice(-5).forEach(function (prev) { %>
+                    <a href="<%- prev.link %>" rel="nofollow">
+                        <%- prev.number %>
+                    </a>
+                    <% }); %>
+                    <% } %>
+                    <span><%- page.pagination.current %></span>
+                    <% if (page.pagination.next.length) { %>
+                    <% page.pagination.next.slice(0, 5).forEach(function (next) { %>
+                    <a href="<%- next.link %>" rel="nofollow">
+                        <%- next.number %>
+                    </a>
+                    <% }); %>
+                    <% } %>
+                </span>
+            </div>
+
         </div>
 
         <% if (typeof page.adv == 'object' && page.adv.bottom) { %>
